--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         
-                        <h1 class="big-title">既然梦寐以求, 那就倾情构建.</h1>
+                        <h1 class="big-title">既然梦寐以求, 那就倾情构建</h1>
                         <div class="start-btn-holder">
                             <a class="start-btn js-scrollTo" href="#pricing">我要建站</a>
                         </div>
@@ -228,19 +228,19 @@
                                         <li>大量模板可供选择</li>
                                         <li>支持商业化</li>
                                         <li>包含SSL安全证书
-                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="SSL证书 – 它使用“https”加密协议，让浏览器能更安全的和服务器进行通信和交互." data-original-title="" title="">
+                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="SSL证书 – 它使用“https”加密协议，让浏览器能更安全的和服务器进行通信和交互" data-original-title="" title="">
                                                 <i class="fa fa-question-circle"></i>
                                             </span>
                                         </li>
                                         <li>简单SEO</li>
                                         <li>大量控件可供选择
-                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="大量优秀控件 – 允许用户选择某些特殊控件或更换不满意的控件，支持用户参与定制." data-original-title="" title="">
+                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="大量优秀控件 – 允许用户选择某些特殊控件或更换不满意的控件，支持用户参与定制" data-original-title="" title="">
                                                 <i class="fa fa-question-circle"></i>
                                             </span>
                                         </li>
                                         <li class="not-supported">
                                             <span class="line-through">服务器后端功能支持</span>
-                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="Plugins – Allows users to add features such as: an e-commerce shopping cart, image sliders, a blog section, a food menu etc." data-original-title="" title="">
+                                            <span data-container="body" data-toggle="popover" data-placement="right" data-content="服务器后端开发 – 包括Python等后端编程语言的api开发，数据库搭建,AI算法开发……，请升级至复杂功能网站开发" data-original-title="" title="">
                                                 <i class="fa fa-question-circle"></i>
                                             </span>
                                         </li>
@@ -250,9 +250,9 @@
 
                     </a>
 
-                    <div class="pricing-link">
+                  <!--   <div class="pricing-link">
                         <a href="https://wanwang.aliyun.com" class="select-btn" target="_blank">搜索域名</a>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -275,13 +275,13 @@
                                     <li>MySQL/MongoDB数据库</li>
                                     <li>支持商业化</li>
                                     <li>包含SSL安全证书
-                                        <span data-container="body" data-toggle="popover" data-placement="right" data-content="SSL证书 – 它使用“https”加密协议，让浏览器能更安全的和服务器进行通信和交互." data-original-title="" title="">
+                                        <span data-container="body" data-toggle="popover" data-placement="right" data-content="SSL证书 – 它使用“https”加密协议，让浏览器能更安全的和服务器进行通信和交互" data-original-title="" title="">
                                             <i class="fa fa-question-circle"></i>
                                         </span>
                                     </li>
                                     <li>紧密需求沟通，迭代总结</li>
                                     <li>大量控件可供选择
-                                        <span data-container="body" data-toggle="popover" data-placement="right" data-content="大量优秀控件 – 允许用户选择某些特殊控件或更换不满意的控件，支持用户参与定制." data-original-title="" title="">
+                                        <span data-container="body" data-toggle="popover" data-placement="right" data-content="大量优秀控件 – 允许用户选择某些特殊控件或更换不满意的控件，支持用户参与定制" data-original-title="" title="">
                                             <i class="fa fa-question-circle"></i>
                                         </span>
                                     </li>
@@ -294,18 +294,18 @@
                             </div>
                         </div>
                         </a>
-                        <div class="pricing-link">
+                       <!--  <div class="pricing-link">
                             <a href="https://wanwang.aliyun.com" class="select-btn" target="_blank">搜索域名</a>
-                        </div>
+                        </div> -->
                     </div>
                 
 
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <a href="https://my.yourwebsite.com/cart.php?currency=3">
+                    <a href="#message-with-link">
                         <div class="hosting-packages">
-                            <p>没有找到您需要的方案? 赶快联系我们!</p>
+                            <p>想要获取详细方案? 赶快联系我们!</p>
                             <span>电话: 18516767839</span>
                         </div>
                     </a>
@@ -326,7 +326,7 @@
                 <div class="col-md-4">
                     <div class="mfeature-box">
                         <div class="mfeature-title">网站建设</div>
-                        <div class="mfeature-text bg-color1">不管您需要什么样的网站, 我们都能快速设计规划，并及时交付给您，并给您提供深度功能定制.</div>
+                        <div class="mfeature-text bg-color1">不管您需要什么样的网站, 我们都能快速设计规划，并及时交付给您，并给您提供深度功能定制</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -415,7 +415,7 @@
                                 <img class="blur-up loaded" data-src="images/YW-referral-man2.png" alt="" src="images/YW-referral-man2.png" data-was-processed="true">
                             </div>
                             <div class="col-xs-9">
-                                <p>我们是一家从事光伏出口产业的公司，曦辉网络不仅帮我们建产品主页，还提供了很多网络服务是我们能很顺利和外国客户交流，非常划算，强烈推荐!</p>
+                                <p>我们是一家从事光伏出口产业的公司，曦辉网络不仅帮我们建产品主页，还提供了很多网络服务使我们能很顺利和外国客户交流，非常划算，强烈推荐!</p>
                                 <p>-
                                     <i>邹勇先生</i>
                                 </p>
@@ -471,15 +471,15 @@
                                         </div>
                                         <button class="accordion__title">我们需要提供什么吗?</button>
                                         <div class="accordion__text">
-                                            <p>如何确定下来合作，需要甲方提供网站主题、功能需求和生成网站内容所需的所有文字和图片.</p>
+                                            <p>如果确定下来合作，需要甲方提供网站主题、功能需求和生成网站内容所需的所有文字和图片</p>
                                         </div>
                                         <button class="accordion__title">网站空间和域名是怎么申请的?</button>
                                         <div class="accordion__text">
-                                            <p>如果甲方没有购买服务器(空间)和域名，公司可以协助购买空间和域名;如果是国内的，公司一并协助域名备案.</p>
+                                            <p>如果甲方没有购买服务器(空间)和域名，公司可以协助购买空间和域名;如果是国内的，公司一并协助域名备案</p>
                                         </div>
                                         <button class="accordion__title">网站开发好后，公司可以提供维护服务吗?</button>
                                         <div class="accordion__text">
-                                            <p>可以,按网站的规模及预算，公司可以提供2个月~2年的维护服务，以签订的合同为准。但公司最希望与甲方建立长期的合作关系，这样不仅能解决以后可能遇到的问题，还能为甲方不断更新和增加业务功能，使网站不断发展壮大.</p>
+                                            <p>可以，按网站的规模及预算，公司可以提供2个月~2年的维护服务，以签订的合同为准。但公司最希望与甲方建立长期的合作关系，这样不仅能解决以后可能遇到的问题，还能为甲方不断更新和增加业务功能，使网站不断发展壮大</p>
                                         </div>
                                     </div>
                                 </div>
