--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5 col-md-push-1">
-                    <a href="#">
-                        </a><div class="pricing-box best-choise"><a href="#">
+                    <div class="pricing-box best-choise">
                             <div class="pricing-content">
                                 <div class="pricing-title">简单静态网站</div>
                                 <div class="pricing-price">一万元
@@ -258,7 +257,7 @@
                                 </div>
                             </div>
 
-                    </a>
+                    
 
                   <!--   <div class="pricing-link">
                         <a href="https://wanwang.aliyun.com" class="select-btn" target="_blank">搜索域名</a>
@@ -268,8 +267,7 @@
             </div>
 
             <div class="col-md-5 col-md-push-1">
-                <a href="https://my.yourwebsite.com/cart.php?a=add&amp;pid=317&amp;tld=.xyz&amp;currency=3">
-                    </a><div class="pricing-box"><a href="https://my.yourwebsite.com/cart.php?a=add&amp;pid=317&amp;tld=.xyz&amp;currency=3">
+                <div class="pricing-box">
                         <div class="pricing-content">
                             <div class="pricing-title">复杂功能网站</div>
                             <div class="pricing-price">十万元
@@ -303,7 +301,7 @@
                                 </ul>
                             </div>
                         </div>
-                        </a>
+                        
                        <!--  <div class="pricing-link">
                             <a href="https://wanwang.aliyun.com" class="select-btn" target="_blank">搜索域名</a>
                         </div> -->
