--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="shortcut icon" href="https://yourwebsite.com/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="https://yourwebsite.com/images/favicon.ico" type="image/x-icon"> -->
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
@@ -504,8 +504,8 @@
         <p>Copyright © 2019 <a href="http://cirray.cn">http://cirray.cn</a> by 曦辉网络 - All rights reserved.</p>
     </footer>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/lazyload.min.js"></script>
     <script src="js/main.js"></script>
